2021-01-07  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-hist.el (w3m-history-scrub): Update for new history behavior of
	"about://" urls.

2021-01-03  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-view-previous-page): When currently in an "about://" url,
	return to the calling url (PR#89 for upstream).

	* w3m-hist.el (w3m-history-push): Don't put "about://" pages in the
	history (PR#89 for upstream).

2020-12-31  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-scroll-up-or-next-url, w3m-scroll-up): Ensure end of page
	remains at bottom of window.

2020-12-28  Boruch Baum  <boruch_baum@gmx.com>

	* w3m.el (w3m-select-buffer-mode): Set variable buffer-quit-function.

	* w3m-session.el (w3m-session-select-mode): Set variable
	buffer-quit-function.

2020-12-23  Boruch Baum  <boruch_baum@gmx.com>

        * w3m.el (w3m--retrieve-1--handler-function): Fix Debian bug 933371 for
	url queries.

2020-12-22  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-filter.el (w3m-filter-stackexchange): Update filter and correct
	bound errors.

2020-12-22  Boruch Baum  <boruch_baum@gmx.com>

	Protect against the nil value for a history plist [emacs-w3m:13716]
	Note: as the cause of it is not made clear yet, the one that should
	be fixed might be in another place.

	* w3m-hist.el (w3m-history-set-plist, w3m-history-modify-properties):
	Protect against the nil value for a history plist.

2020-12-19  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-hist.el (w3m-history-scrub): Update for new hash table handling
	* w3m-download.el (w3m--download-check-and-use-cache): Update for new
	hash table handling.

2020-10-31  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-search.el (w3m-search-engine-alist): Update wikipedia search
	urls.

2020-10-29  Boruch Baum  <boruch_baum@gmx.com>

	* w3m-util.el (w3m-remove-face-property): bugfixes for handling of
	OBJECT and non-list possibility for PROP [emacs-w3m 13684-13686].
	(w3m--remove-face-property): remove temporary function.
